--- a/index.html
+++ b/index.html
@@ -60,20 +60,32 @@
                 </a>
                 <!-- /.head__logo -->
 
-                <!--a href="http://wallet.advcash.com/referral/47df88ec-a211-4fdd-817a-cf54f38b81b9">BTC Debit Card!</a-->
-
-                <!-- .head-btn -->
-                <a href="" ng-click="isCollapsed = !isCollapsed" class="head-btn">
-                    <i class="icon-cog"></i>
-                </a>
-                <!-- /.head-btn -->
+                <!-- .head-nav -->
+                <ul class="head-nav">
+                    <li>
+                        Useful links:
+                    </li>
+                    <li>
+                        <a href="http://wallet.advcash.com/referral/47df88ec-a211-4fdd-817a-cf54f38b81b9">Advcash</a>
+                    </li>
+                    <li>
+                        <a href="">Xapo</a>
+                    </li>
+                    <li>
+                        <a href="">Bitfinex</a>
+                    </li>
+                    <li>
+                        <a href="">BitGold</a>
+                    </li>
+                </ul>
+                <!-- /.head-nav -->
             </div>
             <!-- /.wrapper -->
         </div>
         <!-- /.head-top -->
 
         <!-- .head-collapse -->
-        <div class="head-collapse" ng-hide="isCollapsed">
+        <div class="head-collapse">
             <!-- .wrapper -->
             <div class="wrapper">
                 <!-- .head-box -->
