rm another links

--- a/index.html
+++ b/index.html
@@ -63,19 +63,7 @@
                 <!-- .head-nav -->
                 <ul class="head-nav">
                     <li>
-                        Useful links:
-                    </li>
-                    <li>
-                        <a href="http://wallet.advcash.com/referral/47df88ec-a211-4fdd-817a-cf54f38b81b9">Advcash</a>
-                    </li>
-                    <li>
-                        <a href="">Xapo</a>
-                    </li>
-                    <li>
-                        <a href="">Bitfinex</a>
-                    </li>
-                    <li>
-                        <a href="">BitGold</a>
+                        <a href="http://wallet.advcash.com/referral/47df88ec-a211-4fdd-817a-cf54f38b81b9">BTC Debit Card!</a>
                     </li>
                 </ul>
                 <!-- /.head-nav -->
