add coinbr ticker

--- a/index.html
+++ b/index.html
@@ -86,6 +86,14 @@
 
                 <!-- .head-box -->
                 <div class="head-box">
+                    <a href="" ui-sref="coinbr" class="head-box__title">
+                        CoinBR
+                    </a>
+                </div>
+                <!-- /.head-box -->
+
+                <!-- .head-box -->
+                <div class="head-box">
                     <a href="" ui-sref="bitcointoyou" class="head-box__title">
                         BitcoinToYou
                     </a>
