fix name coinBR

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <!-- .head-box -->
                 <div class="head-box">
                     <a href="" ui-sref="coinbr" class="head-box__title">
-                        CoinBR
+                        coinBR
                     </a>
                 </div>
                 <!-- /.head-box -->
