--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Meta Tags -->
     <meta name="author" content="Anderson Juhasc" />
     <meta name="description" content="" />
-    <meta name="keywords" content="conversor, cotacao, bitcoin, valor, preco, custa, btcbr, btc, brl, btcbrl">
+    <meta name="keywords" content="mercado, negociecoins, bitcoin, flowbtc, coinbr, foxbit, bitcointoyou, btc, brl, btcbrl, brasil">
 
     <!-- Dublin Core -->
     <meta name="DC.Title" content="BTCBRL - Bitcoin Conversor">
